--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script defer src="./index.js"></script>
 </head>
 
-<body>
+<body ontouchstart="">
   <header class="header">
     <div class="container header__container">
       <button class="btn burger" value="Главное меню" aria-label="Открыть меню">
