--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </button>
       <div class="search-form">
         <input class="search-form__input" type="search" placeholder="Что будем искать?">
-        <button class="btn header__btn" aria-label="Искать">
+        <button class="btn header__btn" aria-label="Искать" onclick="this.focus()">
           <svg class="btn__svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <rect width="7.56126" height="1.89031"
